[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "muhp"
version = "0.0.1"
authors = [
  { name="Adrien Renaudineau", email="adrien.renaudineau@universite-paris-saclay.fr" },
]
description = "Lightweight hyperparameters handling"
readme = "README.md"
requires-python = ">=3.10"
classifiers = []
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/arenaudineau/muhp"